fix menu on ios

--- a/docs/src/layouts/App/style.scss
+++ b/docs/src/layouts/App/style.scss
@@ -3,6 +3,8 @@ $mobileBreakPoint: 600px;
 $menuBreakPoint: 800px;
 
 .app {
+  overflow: hidden;
+
   &__navigation {
     position: fixed;
     display: flex;
